# gitchat

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  compos.production.yaml  compose.production.yaml  config.py  database.py  docker-compose.yaml  logger.py  mongo-init.js  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  gh.py
backend/app/schemas/: chat.py  gh.py
backend/utils/: embedder.py  github_manager.py  rag_engine.py  weaviate_manager.py
frontend/: home.py  main.py  pyproject.toml  utils.py
frontend/pages/: chat.py
mcp/: logger.py  pyproject.toml  server.py
mcp/utils/: embedder.py  rag_engine.py  weaviate_manager.py
